--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ string(SUBSTRING ${GIT_SHA1} 0 7 GIT_SHA1_SHORT)
 
 add_library(Cosmo SHARED
         src/Cosmo.cpp
+        src/Dump.cpp
         src/Scripting/Command.cpp
         src/Scripting/GlobalObject.cpp
         src/Scripting/Entity.cpp
