Meta: Install `g++-11-multilib` instead of `g++-multilib`
The wrong version was chosen by default.

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install Prerequisites
       run: |
         sudo apt -yq update
-        sudo apt -yq install g++-11 cmake ninja-build g++-multilib
+        sudo apt -yq install g++-11 cmake ninja-build g++-11-multilib
 
     - name: Use GCC 11 by default
       run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 100 --slave /usr/bin/g++ g++ /usr/bin/g++-11
