Meta: Install `libcrypt-dev:i386` instead of `libcrypt1:i386`
This shouldn't be necessary...

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         sudo dpkg --add-architecture i386
         sudo apt -yq update
-        sudo apt -yq install g++-11 cmake ninja-build g++-11-multilib libcrypt1:i386
+        sudo apt -yq install g++-11 cmake ninja-build g++-11-multilib libcrypt-dev:i386
 
     - name: Use GCC 11 by default
       run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 100 --slave /usr/bin/g++ g++ /usr/bin/g++-11
