Add a `Game.sayText2` function, to send `SayText2` user messages (chat)
**The function name may change!**
This allows scripts to send chat messages to specific recipients, with
specific strings/localized strings and format string parameters, a
source player index, and if it should be sent to the console as well.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,10 +31,11 @@ add_library(Cosmo SHARED
         src/Cosmo.cpp
         src/Dump.cpp
         src/Scripting/Command.cpp
-        src/Scripting/GlobalObject.cpp
         src/Scripting/Entity.cpp
         src/Scripting/EntityPrototype.cpp
         src/Scripting/Game.cpp
+        src/Scripting/GlobalObject.cpp
+        src/Scripting/Helpers.cpp
         src/Scripting/Server.cpp
         )
 
