Add helpers to find a type descriptor for a datamap by field name
This can also be performed recursively, going down the hierarchy of the
datamap and it's base maps.

Also add `CBaseEntity::GetDataDescMap` to get the datamap for an entity.
Note that this concept is _not_ unique to entities, and is totally
abstract for any data/struct.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ string(SUBSTRING ${GIT_SHA1} 0 7 GIT_SHA1_SHORT)
 add_library(Cosmo SHARED
         src/Cosmo.cpp
         src/Dump.cpp
+        src/Helpers.cpp
         src/Scripting/Command.cpp
         src/Scripting/Entity.cpp
         src/Scripting/EntityPrototype.cpp
