Introduce `CTeamRoundTimer`, and `TeamRoundTimerPrototype` for script
`TeamRoundTimerPrototype` inherits `EntityPrototype`, and is used when
`Entity::create` is given an entity that has a classname of
`team_round_timer`. This let's script utilize some methods on a
`CTeamRoundTimer`, such as:
- `GetTimeRemaining` & `SetTimeRemaining` (as `timeRemaining`)
- `AddTimerSeconds` (as `addSeconds`)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ add_library(Cosmo SHARED
         src/Scripting/GlobalObject.cpp
         src/Scripting/Helpers.cpp
         src/Scripting/Server.cpp
+        src/Scripting/TeamRoundTimerPrototype.cpp
         )
 
 target_compile_definitions(Cosmo PRIVATE
