--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = hl2sdk
 	url = https://github.com/drunderscore/hl2sdk
 	branch = tf2
+[submodule "subhook"]
+	path = subhook
+	url = https://github.com/Zeex/subhook
